project2/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-service-v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: info-service-v1
  template:
    metadata:
      labels:
        app: info-service-v1
    spec:
      containers:
        - name: info-service-v1
          image: ludovicherbelin/info-service-v1:latest
          ports:
            - containerPort: 1080
          readinessProbe:
            httpGet:
              path: /info/v1/
              port: 1080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=cloud-computing-project2:europe-west1:cloud-computing-2019-db=tcp:3306",
                    "-credential_file=/secrets/cc-sql-acc.json"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/
              readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          defaultMode: 420
          secretName: cloudsql-instance-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service-v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: image-service-v1
  template:
    metadata:
      labels:
        app: image-service-v1
    spec:
      containers:
        - name: image-service-v1
          image: ludovicherbelin/image-service-v1:latest
          ports:
            - containerPort: 1080
          readinessProbe:
            httpGet:
              path: /image/v1/
              port: 1080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: info-service-v1
spec:
  ports:
  - port: 80
    targetPort: 1080
    protocol: TCP
  selector:
    app: info-service-v1
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: image-service-v1
spec:
  ports:
  - port: 80
    targetPort: 1080
    protocol: TCP
  selector:
    app: image-service-v1
  type: NodePort

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cc-2019-project2
spec:
  rules:
  - http:
      paths:
      - path: /info/v1/*
        backend:
          serviceName: info-service-v1
          servicePort: 80
      - path: /image/v1/*
        backend:
          serviceName: image-service-v1
          servicePort: 80
