project2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cc-2019-project2
spec:
  rules:
  - http:
      paths:
      - path: /info/v1/*
        backend:
          serviceName: info-service-v1
          servicePort: 1080
      - path: /image/v1/*
        backend:
          serviceName: image-service-v1
          servicePort: 1080
